﻿Changelog

1.1.3
Adding addon control to Easel
New general option, disable blog on home page and display comments on home page.


1.1.2
Moved the wp_list_pages() out of the content area and into the display_post area so that it can properly be under the clear float for the content area
added css element .post-extras and made it clear:both; on it so that it resets the clearing at that point as well.
changed bloginfo('wpurl') to echo site_url() 
changed bloginfo('template_directory') to echo get_template_directory_uri()

1.1.1
Added page's to the searchs in the pre_get_posts 
blocked off the 'pages' from having the 'posted in' message in the post (displaypost.php)
blocked off the post calendar from displaying in archive/searchs for pages
added blank CSS that the wordpress theme checker requires 

1.1.0
Added a generic page template - template.php

1.0.9
Added another catch for get_current_site() which doesn't exist unless it's multisite

1.0.8
Added a saftey catch for wordpress bug with site_name not being part of the current_site object

1.0.7
Modified the behavior of the footer a little so it clears floats.
Added automated copyright info & example text on changing the name via text
Added for multisite a hosted on <networkname>
Added a new body class page-<pageslugname> which will better suit some peoples custom css for individual pages
Removed sidebar-basic and going for straight .sidebar in all the sidebars, removed associated option

1.0.3 - 1.0.6 Various code adjustments and test code that culminated in 1.0.7

1.0.2
Some changes to which filters handle post_type or not.

1.0.1 
Changed Theme URI and Author URI to respective places as appropriate.

1.0 - Release